kubernetes/productcatalogue-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: productcatalogue
  labels:
    app: productcatalogue
spec:
  type: ClusterIP
  selector:
    app: productcatalogue
  ports:
  - protocol: TCP
    port: 8020
    name: http

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: productcatalogue
spec:
  selector:
    matchLabels:
      app: productcatalogue
  replicas: 1
  template:
    metadata:
      labels:
        app: productcatalogue
    spec:
      containers:
      - name: productcatalogue
        image: akells05/prodcat:latest
        ports:
        - containerPort: 8020
        livenessProbe:
          httpGet:
            path: /healthcheck
            port: 8025
          initialDelaySeconds: 30
          timeoutSeconds: 1
