kubernetes/stockmanager-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: stockmanager
  labels:
    app: stockmanager
spec:
  type: ClusterIP
  selector:
    app: stockmanager
  ports:
  - protocol: TCP
    port: 8030
    name: http

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stockmanager
spec:
  selector:
    matchLabels:
      app: stockmanager
  replicas: 1
  template:
    metadata:
      labels:
        app: stockmanager
    spec:
      containers:
      - name: stockmanager
        image: akells05/stockmanager
        ports:
        - containerPort: 8030
        livenessProbe:
          httpGet:
            path: /health
            port: 8030
          initialDelaySeconds: 30
          timeoutSeconds: 1
